--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ body {
 .restaurants {
     width: 100%;
     overflow-x: hidden;
+    margin-bottom: 15rem;
 }
 
 .restaurants .list {
@@ -276,8 +277,8 @@ body {
     box-shadow: 0 9px 25px 0px #f9f2cd;
 }
 
-.swiper-slide-active .btn.btn-secondary:active,
-.swiper-slide-active .btn.btn-secondary:hover {
+.btn.btn-secondary:active,
+.btn.btn-secondary:hover {
     box-shadow: 0 1px 25px 0px #f9f2cd;
     color: #ffffff;
     background-color: #edd96f;
@@ -346,6 +347,8 @@ body {
     visibility: visible;
 }
 
+.overlay.show .info-success,
+.overlay.show .info-feedback,
 .overlay.show .popup {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
@@ -409,8 +412,57 @@ body {
     margin: .5rem 0 0 2rem;
 }
 
+.columns {
+    margin: 5rem auto 0;
+    max-width: 95%;
+    background-color: #ffffff;
+    overflow: hidden;
+}
+
+.columns .columns-header {
+    width: 100%;
+    text-align: center;
+}
+
+.columns .columns-title {
+    font-weight: 600;
+    font-size: 3rem;
+    margin-bottom: .5rem;
+}
+
+.column {
+    width: 25%;
+    padding: 1rem;
+    box-sizing: border-box;
+}
+
+.column .column-title {
+    font-weight: 600;
+    font-size: 2rem;
+    margin-bottom: .5rem;
+}
+
+.column p {
+    line-height: 1.4;
+}
+
+.columns.flexbox {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.column.left {
+    float: left;
+}
+
+.column.inline-block {
+    display: inline-block;
+    vertical-align: top;
+}
+
 /* fix auto-zoom on iOS devices */
-@media screen and (-webkit-min-device-pixel-ratio:0) {
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
     select,
     textarea,
     input {
@@ -428,5 +480,17 @@ body {
     .form .form-control.textarea {
         margin-top: 1.5rem;
         min-height: 110px;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    .column {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    .column {
+        width: 100%;
     }
 }
